--- a/php/php.ini
+++ b/php/php.ini
@@ -6,8 +6,8 @@ docref_ext = 0
 log_errors = On
 short_open_tag = On
 error_log = /var/www/html/logs/php.log
-error_reporting = E_WARNING & ~E_NOTICE & ~E_DEPRECATED & ~E_STRICT
+error_reporting = E_ALL & ~E_NOTICE & ~E_STRICT & ~E_DEPRECATED
 max_execution_time = 0
-memory_limit = 4G
-post_max_size = 4G
-upload_max_filesize = 4G
+memory_limit = 512M
+post_max_size = 20M
+upload_max_filesize = 20M
