--- a/php/php.ini
+++ b/php/php.ini
@@ -3,10 +3,10 @@ display_errors = On
 html_errors = On
 docref_root = 0
 docref_ext = 0
-log_errors = On
-short_open_tag = On
-error_log = /var/www/html/logs/php.log
-error_reporting = E_ALL & ~E_NOTICE & ~E_STRICT & ~E_DEPRECATED
+log_errors = Off
+short_open_tag = Off
+error_log = /opt/app-root/src/logs/php.log
+error_reporting = E_WARNING & ~E_NOTICE & ~E_DEPRECATED & ~E_STRICT
 max_execution_time = 0
 memory_limit = 512M
 post_max_size = 20M
